2016-09-09 Massimo Manghi <mxmanghi@apache.org>
    * tests/runtests.tcl: support for Apache 1.3 dropped. Add modules needed by
    Apache 2.4
    * tests/apachetests/apachetests.tcl: Dropped support for Apache 1.3
    * tests/shorthand.test: shorthand notation versioning added
    * tests/virtualhost.test: removed NameVirtualHost directive no longer supported

2016-09-08 Massimo Manghi <mxmanghi@apache.org>
    * Changelog: removed spurious duplicated entry 
    * rivet/rivet-tcl/try.tcl: enable Id svn keyword
    * rivet/rivet-tcl/catch.tcl: fixed wrong script invocation, enable Id svn keyword
    * rivet/rivet-tcl/url_query.tcl: add new command ::rivet::url_query

2016-09-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/catch.tcl: fixed argument management in ::catch call

2016-07-14 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/intro.xml: amended wrong section title in introduction

2016-07-06 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.tcl: typo in section ::rivet::xml corrected
    * rivet/packages/form/form2.tcl: merging recent fix of the select
    element generation
    * configure.ac,VERSION: changing version to 2.3.2

2016-06-16 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: manual page for ::rivet::catch rewritten
    * Changelog: entry for 2.3.1 release corrected (the date was 
    quite incidentally postponed to 16 June, thus exactly today)

2016-04-16 Massimo Manghi <mxmanghi@apache.org>
    * .: released as 2.3.1

2016-04-13 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: version number set to 2.3.1

2016-04-05 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/form/form.tcl: wrong element created by 'file' method
    * doc/xml/examples.xml: conflicting targets fixed

2016-04-04 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xml: Add 2016 to copyright notice

2016-03-26 Massimo Manghi <mxmanghi@apache.org>
    * .: Relased as 2.3.0
