@@ -1,1 +1,7 @@
+# -- exit.tcl
+#
+# it simply issues a 100 exit code. As simple as that.
+#
+#
+
 exit 100
