@@ -1,4 +1,8 @@
 2016-09-09 Massimo Manghi <mxmanghi@apache.org>
+    * tests/bailout.test: add tests for ::rivet::catch and ::rivet::try
+    * tests/catch.rvt,try.rvt: script testing handling various conditions
+
+2016-09-09 Massimo Manghi <mxmanghi@apache.org>
     * tests/runtests.tcl: support for Apache 1.3 dropped. Add modules needed by
     Apache 2.4
     * tests/apachetests/apachetests.tcl: Dropped support for Apache 1.3
